<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.clipjoy.PublisherActivity">

    <TextView
        android:id="@+id/textViewPublisher"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hello_Publisher"
        android:textSize="30dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094" />

    <Button
        android:id="@+id/publisherBtn1"
        android:layout_width="175dp"
        android:layout_height="77dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="508dp"
        android:text="@string/publisherSet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publisherBtn2"
        android:layout_width="175dp"
        android:layout_height="77dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="404dp"
        android:text="@string/publisherUpload"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publisherBtn3"
        android:layout_width="175dp"
        android:layout_height="77dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="300dp"
        android:text="@string/publisherDelete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/publisherBtn4"
        android:layout_width="175dp"
        android:layout_height="77dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="180dp"
        android:text="@string/publisherRecord"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>