<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.clipjoy.VideoInfoDelete">

    <TextView
        android:id="@+id/textViewSure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SureVideo"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <Button
        android:id="@+id/yesBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="408dp"
        android:text="@string/Yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSure"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/noBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="157dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="296dp"
        android:text="@string/No"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yesBtn"/>

</androidx.constraintlayout.widget.ConstraintLayout>